finishing documentation
